visibility fixed

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,6 +9,7 @@ body {
     z-index: -1;
     text-align: center;
     vertical-align: middle;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .main {
@@ -37,8 +38,18 @@ a, a:link, a:visited, a:hover, a:active {
 
 #flatsTable, .table, table.dataTable tbody tr {
     background-color: rgba(255, 255, 255, 0.40);
+    color: #333;
 }
 
 #flatsTable tr:hover, .table tr:hover, table.dataTable tbody tr:hover {
     background-color: rgba(255, 255, 255, 0.6);
+    color: #333;
+}
+
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+select[name="flatsTable_length"], input[type="search"] {
+    color: #333;
 }
